--- a/project-details.html
+++ b/project-details.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Staging, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Staging | Template</title>
+    <title>Dheergayu | Clinical Depression Monitoring Assistant</title>
 
     <meta name="description" content="" />
     <meta name="author" content="" />
